@@ -11,7 +11,7 @@ in them.
 
 Embrace uses Edje for the user interface. Plugins are used for the
 mailbox monitoring. Embrace currently ships with plugins for IMAP, POP3,
-mbox and maildir mailboxes.
+mbox, maildir and Sylpheed mailboxes.
 
 For more information about the themes, please refer to README in
 data/themes/<name>/README.
